<resources>
    <string name="app_name">PCSCS</string>
    <string name="app_package">io.github.pcscs</string>
    <string name="no_network">No Internet connection detected! \nOpen Network Settings?</string>

    <!-- Login/Register -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="loginText">Login</string>
    <string name="registerText">Register</string>

    <string name="name_hint">Name</string>
    <string name="email_hint">Email ID</string>
    <string name="confirmPassword_hint">Confirm Password</string>
    <string name="cancelText">Cancel</string>
    <string name="registerSuccess">Successfully Registered, Please check mail for email confirmation</string>
    <string name="registeredVerification">The Email ID associated with this account is unverified, Please verify to continue</string>
    <string name="verificationSent">Verification mail sent. Please check email to continue</string>
    <string name="verificationFailedToSend">Failed to send verification, Please try again later</string>
    <!-- Error -->
    <string name="errorProcessing">There was some error processing. Please try again in some time!</string>
    <string name="errorField">This field cannot be empty!</string>
    <string name="emailError">The email does not match!</string>
    <string name="passError">The passwords do not match!</string>
    <string name="login_error_title">Error!</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="username_exists">The username already exists, Please use a different username</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="editProfile">Edit Profile</string>

    <!-- User Verify -->
    <string name="userCheck">Please confirm the password to continue</string>
    <string name="confirmText">Confirm</string>
    <string name="securityLogout">Logged user out for security</string>

    <!-- Update User Profile -->
    <string name="changePassword">Change Password</string>
    <string name="updateText">Update</string>
    <string name="email_confirm_hint">Confirm Email ID</string>
    <string name="passUpdateText">Update Password</string>

    <!-- Logout -->
    <string name="logout">Logout</string>
    <string name="logoutSuccess">Successfully Logged out</string>
    <string name="logoutFail">Error logging out, Please try again later</string>

    <string name="copyright">Copyrights %1$d</string>
    <string name="profileUpdated">Profile updated successfully!</string>
    <string name="profileUpdateFailed">Failed to update build, total errors:</string>
    <string name="buildUpdated">Build updated successfully!</string>
    <string name="buildUpdateFailed">Failed to update profile, total errors:</string>
    <string name="easter_egg">Your existence disgusts me!</string>
    <string name="passwordResetEmail">Please enter your registered email</string>
    <string name="PasswordResetSent">Mail sent, please check your email</string>
    <string name="PasswordResetFailed">Failed to send mail, please try again later</string>
    <string name="ResetPassword">Forgot Password</string>
    <string name="rememberLogin">Remember Me</string>
    <string name="button_go_home">Home</string>
    <string name="no_builds">You currently have no builds.</string>
    <string name="createBuild">Create</string>
    <string name="viewBuilds">View Builds</string>
    <string name="buildNumber">Build ID #</string>
    <string name="search">Search</string>
    <string name="cpu">CPU</string>
    <string name="motherboard">MOBO</string>
    <string name="psu">PSU</string>
    <string name="gpu">GPU</string>
    <string name="screen">MON</string>
    <string name="cabinet">CAB</string>
    <string name="buildName">Build Name</string>
    <string name="manageBuild">Manage</string>
    <string name="submit">Submit</string>
    <string name="feedback">Type your query</string>
    <string name="emptyFields">One or more fields are empty. Please fill all the fields</string>
    <string name="buildTDP">TDP:</string>
    <string name="buildCount">You have created </string>
    <string name="searchFragment">You may search for builds and parts</string>
    <string name="searchBuilds">Search Builds</string>
    <string name="searchParts">Search Parts</string>
    <string name="searchmeme">One does not simply search for builds.</string>

    <string-array name="cpulist">
        <item>AMD Ryzen 5</item>
        <item>AMD Ryzen 7</item>
        <item>AMD FX-8350</item>
        <item>Intel i5 3250</item>
        <item>Intel i7 6700</item>
        <item>Intel i7 6900k</item>
        <item>Intel Xeon</item>
    </string-array>

    <string-array name="cablist">
        <item>Corsair Carbide Spec-01</item>
        <item>Cooler Master Pro</item>
        <item>Corsair Series 1 Red</item>
        <item>Phanteks Enthoo</item>
        <item>Thermaltake Core P3</item>
        <item>Fractal Design R1</item>
        <item>NZXT S340</item>
    </string-array>
    <string-array name="gpulist">
        <item>Nvidia GTX 1060</item>
        <item>Nvidia GTX 1080</item>
        <item>AMD RX480</item>
        <item>AMD Vega</item>
        <item>Nvidia GTX 1080ti</item>
        <item>Nvidia GTX 1050ti</item>
        <item>Nvidia GT210 Tobya Edition</item>
    </string-array>
    <string-array name="mobolist">
        <item>MSI Z170A</item>
        <item>Gigabyte Z170A</item>
        <item>ASRock Z270</item>
        <item>MSI H110M</item>
        <item>MSI B150M</item>
        <item>ASUS Z170A</item>
        <item>ASRock Fatal1ty</item>
    </string-array>
    <string-array name="monlist">
        <item>BenQ 21in. 1080p</item>
        <item>BenQ 22in. 1080p</item>
        <item>LG 27in. 1440p</item>
        <item>AOC 21in. 768p</item>
        <item>ASUS ROG Strix 27in. 1440p</item>
        <item>LG 35in. 2880p</item>
    </string-array>
    <string-array name="psulist">
        <item>Corsair 500W</item>
        <item>Corsair 600W</item>
        <item>Cooler Master 800W</item>
        <item>NZXT 1000W</item>
        <item>Corsair 300W</item>
        <item>NZXT 600W</item>
        <item>Silverstone 800W</item>
    </string-array>
</resources>
