<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Update.UserUpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_changeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameChangeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </com.github.florent37.materialtextfield.MaterialTextField>


    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_changeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailChangeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_changeEmailconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailChangeFieldconfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/email_confirm_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </com.github.florent37.materialtextfield.MaterialTextField>

    <Button
        android:id="@+id/changeProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/updateText" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/cancelText" />

    <TextView
        android:text="@string/changePassword"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editProfilePassword" />

    </LinearLayout>

</ScrollView>