<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserCheck"
    android:orientation="vertical">


    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:text="@string/userCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userCheckText"
            android:gravity="center"
            android:textSize="18sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_passwordCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordCheckField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </com.github.florent37.materialtextfield.MaterialTextField>
    <Button
        android:id="@+id/confirmButton"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmText"
        android:layout_width="match_parent" />
</LinearLayout>